<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:background="@color/white"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/header_permission"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:paddingTop="8dp"
                android:gravity="start"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/title_permission"
                android:textColor="#1E252B"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="21sp"
                android:layout_height="48dp"
                android:lineSpacingExtra="28.6dp"
                android:text="@string/per_title"/>
            <TextView
                android:id="@+id/btn_go"
                android:layout_width="wrap_content"
                android:text="@string/per_go"
                android:paddingHorizontal="20dp"
                android:backgroundTint="@color/white"
                android:textSize="16sp"
                android:visibility="gone"
                android:gravity="center"
                android:textColor="#3650FD"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="48dp"/>
        </LinearLayout>
        <ImageView
            android:layout_width="214dp"
            android:layout_height="170.24dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_permission"
            android:id="@+id/image_permission"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp"/>
        <TextView
            android:id="@+id/description_perssion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="3dp"
            android:gravity="center"
            android:textSize="14dp"
            android:text="@string/per_content"
            android:textColor="#4F4F4F"
            android:layout_marginTop="6.76dp"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="52dp"
            android:orientation="horizontal"
            android:background="@drawable/switch_bar_corner"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/per_storage"
                android:layout_height="32dp"
                android:id="@+id/tv_storage"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:thumb="@drawable/bg_thumb"
                app:track="@drawable/bg_track"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="52dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:background="@drawable/switch_bar_corner"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/per_camera"
                android:layout_height="32dp"
                android:id="@+id/tv_camera"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch2"
                android:layout_width="wrap_content"
                android:thumb="@drawable/bg_thumb"
                app:track="@drawable/bg_track"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml"  />
        </LinearLayout>

    </LinearLayout>
</layout>