<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/color_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingTop="30dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/btn_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_radius_black"
                android:gravity="center"
                android:padding="14dp"
                android:text="@string/title_text_translation"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/ic_text_in_voice" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_radius_white"
                android:gravity="center"
                android:padding="14dp"
                android:text="@string/title_voice_translation"
                android:textColor="@color/color_main"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/ic_voice_in_voice" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@drawable/bg_text_voice_translate"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/layoutSpinner"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:paddingVertical="10dp"
                android:weightSum="5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/btn_lang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_radius_white"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/img_lang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/color_united_kingdom" />

                    <TextView
                        android:id="@+id/tv_lang"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="20dp"
                        android:drawableEnd="@drawable/ic_up"
                        android:paddingEnd="10dp"
                        android:singleLine="true"
                        android:text="UK"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                </LinearLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/textAreaLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toTopOf="@+id/idIVMic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutSpinner">

                <EditText
                    android:id="@+id/idTVOutput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints=""
                    android:background="@drawable/bg_border_edit_text"
                    android:contentDescription="@string/app_name"
                    android:focusable="false"
                    android:gravity="top|left"
                    android:inputType="text|textMultiLine|textCapSentences"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="40dp"
                    android:paddingBottom="40dp"
                    android:scrollHorizontally="false"
                    android:textColor="@color/black"
                    android:textColorHint="@color/text_base"
                    android:textSize="14sp"
                    tools:ignore="LabelFor,MissingConstraints,RtlHardcoded,RtlSymmetry"
                    tools:layout_editor_absoluteX="16dp" />

                <ImageView
                    android:id="@+id/btnClearEdt"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/ic_round_close"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/idTVOutput"
                    tools:ignore="MissingConstraints" />

                <LinearLayout
                    android:id="@+id/btn_copy"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:id="@+id/copyButton"
                        android:layout_width="24dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:background="@drawable/iconamoon_copy_bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/idTVOutput"
                        tools:ignore="MissingConstraints" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <ImageView
                android:id="@+id/idIVMic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:alpha="0.4"
                android:layout_marginBottom="60dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_voice"
                android:text="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <!--creating a simple image view for mic-->

    </LinearLayout>
</layout>